# fmeca

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  server.json
.github/workflows/: publish.yml  release.yml
crates/fmeca/: Cargo.toml  README.md
crates/fmeca-mcp/: Cargo.toml  README.md
crates/fmeca-mcp/src/: config.rs  lib.rs  main.rs  server.rs
crates/fmeca-mcp/tests/: server.rs
crates/fmeca/src/: analyze.rs  criticality.rs  detect.rs  engine.rs  error.rs  event.rs  export.rs  lib.rs  matrix.rs  model.rs  projection.rs  readiness.rs  response.rs  scoring.rs  signal.rs  store.rs
crates/fmeca/tests/: analyze.rs  concurrency.rs  criticality.rs  detectors.rs  matrix_strategy.rs  readiness.rs  residual_observations.rs  roundtrip.rs
crates/fmeca/tests/common/: mod.rs
