[package]
name = "fmeca-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Stdio MCP server wrapping the fmeca kernel: a deterministic, offline structured-FMECA engine exposed as a command/query MCP tool surface."
keywords = ["mcp", "fmeca", "risk", "failure-modes", "analysis"]
categories = ["development-tools", "command-line-utilities"]

[lib]
name = "fmeca_mcp"
path = "src/lib.rs"

[[bin]]
name = "fmeca-mcp"
path = "src/main.rs"

[dependencies]
fmeca = { path = "../fmeca", version = "0.0.1" }
anyhow = "1"
rmcp = { version = "1.7", default-features = false, features = ["server", "macros", "transport-io"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
